--- a/about.html
+++ b/about.html
@@ -1,43 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us | Happy Sprouts</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
 
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Comic Neue', cursive;
       margin: 0;
       padding: 0;
-      background-color: #f0fafd;
+      background: linear-gradient(to bottom right, #f0fafd, #e0ffe5);
       color: #333;
-      line-height: 1.6;
     }
 
     header {
       background: linear-gradient(to right, #8CC63F, #14A3D4);
       color: white;
-      text-align: center;
       padding: 40px 20px;
-      border-bottom: 6px solid #14A3D4;
+      text-align: center;
+      border-radius: 0 0 20px 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
 
     header h1 {
-      font-family: 'Comic Neue', cursive;
-      font-size: 2.8rem;
+      font-size: 3rem;
       margin-bottom: 10px;
     }
 
     .container {
       max-width: 1000px;
       margin: 40px auto;
-      padding: 0 20px;
-      background: white;
+      background-color: white;
       border-radius: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       padding: 40px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+      line-height: 1.7;
     }
 
     section {
@@ -45,106 +44,95 @@
     }
 
     h2 {
-      font-size: 1.8rem;
       color: #14A3D4;
-      margin-bottom: 10px;
+      font-size: 2rem;
+      margin-bottom: 15px;
     }
 
-    h3 {
-      color: #EC2930;
-      margin-top: 25px;
-      margin-bottom: 10px;
-    }
-
-    ul {
-      padding-left: 20px;
-    }
-
-    ul li {
-      margin-bottom: 10px;
+    ul li::before {
+      content: "🌱 ";
     }
 
     .core-values span {
-      font-weight: bold;
+      display: block;
+      margin-bottom: 10px;
+    }
+
+    .back-button {
       display: inline-block;
-      margin-right: 8px;
-      color: #8CC63F;
+      margin-top: 30px;
+      text-decoration: none;
+      color: #EC2930;
+      font-weight: bold;
+      background-color: #fdf3f4;
+      padding: 10px 20px;
+      border-radius: 25px;
+      transition: background-color 0.3s ease;
     }
 
-    .core-values p {
-      margin-bottom: 12px;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #dff7fb;
-      font-size: 14px;
-      color: #666;
+    .back-button:hover {
+      background-color: #ffe9ec;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>About Happy Sprouts</h1>
-    <p>Nurturing Growth Through Movement, Play & Care</p>
-  </header>
+<header>
+  <h1>About Happy Sprouts</h1>
+  <p>Empowering children through movement, play, and compassion.</p>
+</header>
 
-  <div class="container">
+<div class="container">
+  <section>
+    <h2>Who We Are</h2>
+    <p><strong>Happy Sprouts</strong> is a pediatric physical therapy clinic that welcomes children of all abilities into a warm and supportive space. We chose the name because we believe that, like sprouts, every child grows in their own time with the right care. Some of the kids we work with are building new skills, others are healing from injury, and some have conditions that make movement more challenging. No matter the situation, we focus on helping each child move with more comfort and confidence. Every session is shaped with care, patience, and respect for their unique path.</p>
 
-    <section>
-      <h2>Who We Are</h2>
-      <p><strong>Happy Sprouts</strong> is a pediatric physical therapy clinic that welcomes children of all abilities into a warm and supportive space. We chose the name because we believe that, like sprouts, every child grows in their own time with the right care. Some of the kids we work with are building new skills, others are healing from injury, and some have conditions that make movement more challenging. No matter the situation, we focus on helping each child move with more comfort and confidence.</p>
-      <p>Every session is shaped with care, patience, and respect for their unique path.</p>
-      <p>Our approach to therapy is rooted in <strong>play</strong>. Children learn best when they are having fun, so we design each session around what excites and motivates them. We use games, toys, movement, and music to support strength, balance, and coordination in ways that feel enjoyable. Each activity is guided by both physical goals and emotional well-being. We want every child to leave each visit feeling proud, supported, and more confident in their body.</p>
-      <p>Families are always involved in the process. We listen closely to parents and caregivers, share updates often, and offer ideas to support progress at home. Our goal is to create a team around each child, with the family at the center. At Happy Sprouts, growth is more than physical—it includes building self-esteem, resilience, and joy. We are here to help children feel seen, safe, and successful as they grow into their full potential.</p>
-    </section>
+    <p>Our approach to therapy is rooted in play. Children learn best when they are having fun, so we design each session around what excites and motivates them. We use games, toys, movement, and music to support strength, balance, and coordination in ways that feel enjoyable. The environment is calm and flexible, allowing children to feel safe and curious. Each activity is guided by both physical goals and emotional well-being. We want every child to leave each visit feeling proud, supported, and more confident in their body.</p>
 
-    <section>
-      <h2>Mission</h2>
-      <ul>
-        <li>Provide compassionate, evidence-based physical therapy services tailored to each child’s needs.</li>
-        <li>Partner with families to deliver personalized care in a safe and child-friendly environment.</li>
-        <li>Support the growth, development, and independence of every child through early and holistic intervention.</li>
-        <li>Promote continued learning and professional development among staff to ensure high standards of pediatric care.</li>
-        <li>Collaborate with healthcare providers, schools, and communities to ensure continuity of care and support.</li>
-      </ul>
-    </section>
+    <p>Families are always involved in the process. We listen closely to parents and caregivers, share updates often, and offer ideas to support progress at home. Our goal is to create a team around each child, with the family at the center. We believe that small wins matter just as much as big breakthroughs—and that all progress deserves to be celebrated. At Happy Sprouts, growth is more than physical—it includes building self-esteem, resilience, and joy.</p>
+  </section>
 
-    <section>
-      <h2>Vision</h2>
-      <p>We envision becoming a leading pediatric physical therapy clinic known for excellence in rehabilitative care, early intervention, and family-centered approaches—empowering children to reach their fullest potential in movement and daily life.</p>
-    </section>
+  <section>
+    <h2>Mission</h2>
+    <ul>
+      <li>Provide compassionate, evidence-based physical therapy services tailored to each child’s needs.</li>
+      <li>Partner with families to deliver personalized care in a safe and child-friendly environment.</li>
+      <li>Support growth, development, and independence through early and holistic intervention.</li>
+      <li>Promote continued learning and development among staff to ensure high standards of pediatric care.</li>
+      <li>Collaborate with healthcare providers, schools, and communities to ensure continuity of care and support.</li>
+    </ul>
+  </section>
 
-    <section>
-      <h2>Our Goals</h2>
-      <ul>
-        <li><strong>Deliver Effective Interventions:</strong> Constantly provide evidence-based therapy tailored to each child.</li>
-        <li><strong>Promote Family Involvement:</strong> Engage parents and caregivers as active participants in the therapy process.</li>
-        <li><strong>Support Holistic Development:</strong> Address physical, cognitive, emotional, and social aspects of growth.</li>
-        <li><strong>Ensure a Safe Environment:</strong> Maintain a warm, motivating space for children of all abilities.</li>
-        <li><strong>Foster Professional Growth:</strong> Encourage staff training and learning for best practices in pediatric rehab.</li>
-        <li><strong>Build Community Connections:</strong> Work with schools, doctors, and organizations for a broader support system.</li>
-      </ul>
-    </section>
+  <section>
+    <h2>Vision</h2>
+    <p>We envision becoming a leading pediatric physical therapy clinic known for excellence in rehabilitative care, early intervention, and family-centered approaches—empowering children to reach their fullest potential in movement and daily life.</p>
+  </section>
 
-    <section class="core-values">
-      <h2>Our Core Values</h2>
-      <p><span>S</span> for <strong>Safety</strong>: We prioritize the physical and emotional safety of every child.</p>
-      <p><span>P</span> for <strong>Playfulness</strong>: We use play to connect, motivate, and engage children in therapy.</p>
-      <p><span>R</span> for <strong>Respect</strong>: We honor the dignity and background of every child and family.</p>
-      <p><span>O</span> for <strong>Optimism</strong>: We inspire families with a hopeful outlook and belief in progress.</p>
-      <p><span>U</span> for <strong>Understanding</strong>: We practice empathy and active listening to truly meet each child’s needs.</p>
-      <p><span>T</span> for <strong>Teamwork</strong>: We collaborate with families and professionals to support each child fully.</p>
-      <p><span>S</span> for <strong>Service</strong>: We serve with compassion and dedication to children’s growth and development.</p>
-    </section>
+  <section>
+    <h2>Goals</h2>
+    <ul>
+      <li>To provide effective, evidence-based physical therapy tailored to each child’s unique needs.</li>
+      <li>Promote family involvement through education, collaboration, and home programs.</li>
+      <li>Support holistic development—physical, emotional, cognitive, and social.</li>
+      <li>Ensure a safe and child-friendly environment that motivates learning and movement.</li>
+      <li>Foster professional growth and stay updated with best practices in pediatric rehab.</li>
+      <li>Build strong community ties with schools, pediatricians, and support groups.</li>
+    </ul>
+  </section>
 
-  </div>
+  <section class="core-values">
+    <h2>Core Values</h2>
+    <span><strong>S</strong> for <strong>Safety</strong>: We prioritize both physical and emotional safety in every session.</span>
+    <span><strong>P</strong> for <strong>Playfulness</strong>: We use play to connect with children and enhance learning.</span>
+    <span><strong>R</strong> for <strong>Respect</strong>: We honor every child’s dignity, individuality, and culture.</span>
+    <span><strong>O</strong> for <strong>Optimism</strong>: We foster a hopeful outlook and celebrate every success.</span>
+    <span><strong>U</strong> for <strong>Understanding</strong>: We practice empathy, compassion, and patience.</span>
+    <span><strong>T</strong> for <strong>Teamwork</strong>: We work hand-in-hand with families and care providers.</span>
+    <span><strong>S</strong> for <strong>Service</strong>: We are committed to child-centered, compassionate care every day.</span>
+  </section>
 
-  <footer>
-    &copy; 2025 Happy Sprouts Pediatric Therapy Clinic. All rights reserved.
-  </footer>
+  <a href="index.html" class="back-button">← Back to Main Page</a>
+</div>
 
 </body>
 </html>
