--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <a href="#location" style="color: #14A3D4; text-decoration: none;">Location</a>
     <a href="#contact" style="color: #14A3D4; text-decoration: none;">Contact</a>
 
-    <a href="tel:0321234567" style="background-color: #00A6E0; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">09618032275</a>
+    <a href="feedback.html" style="background-color: #00A6E0; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">FEEDBACK</a>
     <a href="prices.html" style="background-color: #8DC63F; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">PRICES </a>
     <a href="book.html" style="background-color: #E53935; color: white; padding: 10px 18px; border-radius: 25px; text-decoration: none;">BOOK APPOINTMENT</a>
   </nav>
